# cpp-starter-template

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  codecov.yml  vcpkg.json
.circleci/: config.yml
cmake/: CodeCoverage.cmake  compile_options.cmake
include/: test.hpp
src/: CMakeLists.txt  test.cpp
test/: CMakeLists.txt  FirstTest.cpp  tests-main.cpp
